src/objects/Campaign.object
<CustomObject>
    <fields>
        <fullName>Area_of_Law__c</fullName>
        <label>Area of Law</label>
        <picklist>
            <picklistValues>
                <fullName>Immigration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family Law</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Housing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LGBT Rights</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Closing_Comments__c</fullName>
        <inlineHelpText>PILA reflections on how this referral went and any learnings</inlineHelpText>
        <label>Closing Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Email_sent_to_lawyers__c</fullName>
        <description>Any additional info about when this was sent, any challenges or learnings etc</description>
        <label>Email sent to lawyers</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Evaluation_from_NGO__c</fullName>
        <inlineHelpText>Feedback from NGO</inlineHelpText>
        <label>Evaluation from NGO</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Evaluation_from_lawyers__c</fullName>
        <label>Evaluation from lawyers</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FLAC_Centre__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FLAC Centre</label>
        <referenceTo>FLAC_Centre__c</referenceTo>
        <relationshipLabel>Campaigns</relationshipLabel>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Impact__c</fullName>
        <inlineHelpText>What was the impact as a result of the referral</inlineHelpText>
        <label>Impact</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>In_discussion_with_NGO__c</fullName>
        <description>For notes about progress at this stage</description>
        <label>In discussion with NGO</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Lawyers_selected_and_introduced_to_NGO__c</fullName>
        <label>Lawyers selected and introduced to NGO</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Memo_approved_and_attached_to_record__c</fullName>
        <description>Any notes about when this happened, any diffiulties or lessons learned etc</description>
        <label>Memo approved and attached to record</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>NGO_Contact_Person__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The person who requested or is managing the referral in the NGO</inlineHelpText>
        <label>NGO Contact Person</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>PILA Pro bono Referrals Requested</relationshipLabel>
        <relationshipName>PILAReferral</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NGO__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Search for the NGO that requested the referral</inlineHelpText>
        <label>NGO</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>PILA Pro bono Referrals Requested</relationshipLabel>
        <relationshipName>PILAReferral</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Next_action_to_be_completed_by__c</fullName>
        <label>Next action to be completed by</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Number_of_Volunteers__c</fullName>
        <inlineHelpText>The total number of volunteers whose Hours Status = Completed or Confirmed.</inlineHelpText>
        <label>Number of Volunteers</label>
        <summarizedField>Volunteer_Job__c.Number_of_Volunteers__c</summarizedField>
        <summaryForeignKey>Volunteer_Job__c.Campaign__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Referral_memo_drafted_and_sent_to_NGO__c</fullName>
        <description>Any notes about progress or difficulties at the referral memo stage</description>
        <label>Referral memo drafted and sent to NGO</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Referral_underway__c</fullName>
        <label>Referral underway</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Stage_of_Referral__c</fullName>
        <label>Stage of Referral</label>
        <picklist>
            <picklistValues>
                <fullName>In discussion with NGO</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Referral memo drafted and sent to NGO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Memo approved and attached to record</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMail sent to lawyers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lawyers selected and introduced to NGO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Referral under way</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Work completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Evaluation completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Attending__c</fullName>
        <description>All those registered to attend so far</description>
        <label>Total Attending</label>
        <summaryFilterItems>
            <field>CampaignMember.Status</field>
            <operation>equals</operation>
            <value>Will attend</value>
        </summaryFilterItems>
        <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_attended__c</fullName>
        <label>Total attended</label>
        <summaryFilterItems>
            <field>CampaignMember.Attendance__c</field>
            <operation>contains</operation>
            <value>Attended</value>
        </summaryFilterItems>
        <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_registered__c</fullName>
        <label>Total registered</label>
        <summaryFilterItems>
            <field>CampaignMember.Registration__c</field>
            <operation>equals</operation>
            <value>Registered</value>
        </summaryFilterItems>
        <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Type_of_Referral__c</fullName>
        <label>Type of Referral</label>
        <picklist>
            <picklistValues>
                <fullName>Legal Advice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Litigation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pre-litigation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Law Reform working group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal Education Session</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Venue__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Venue</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Campaigns</relationshipLabel>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Volunteer_Completed_Hours__c</fullName>
        <inlineHelpText>Total number of hours that are completed.  Hours with other status values are not included.</inlineHelpText>
        <label>Volunteer Completed Hours</label>
        <summarizedField>Volunteer_Job__c.Number_of_Completed_Hours__c</summarizedField>
        <summaryForeignKey>Volunteer_Job__c.Campaign__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Volunteer_Jobs__c</fullName>
        <label>Volunteer Jobs</label>
        <summaryForeignKey>Volunteer_Job__c.Campaign__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Volunteer_Shifts__c</fullName>
        <label>Volunteer Shifts</label>
        <summarizedField>Volunteer_Job__c.Number_of_Shifts__c</summarizedField>
        <summaryForeignKey>Volunteer_Job__c.Campaign__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Volunteer_Website_Time_Zone__c</fullName>
        <inlineHelpText>The Time Zone to use when displaying Shift times on Sites pages.  You only need to set this if you want to override the Time Zone set on the Site Guest User profile.</inlineHelpText>
        <label>Volunteer Website Time Zone</label>
        <picklist>
            <picklistValues>
                <fullName>Pacific/Kiritimati</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pacific/Chatham</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pacific/Auckland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pacific/Enderbury</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pacific/Tongatapu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia/Kamchatka</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pacific/Fiji</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pacific/Norfolk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia/Lord_Howe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia/Sydney</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pacific/Guadalcanal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia/Adelaide</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia/Brisbane</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia/Darwin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia/Seoul</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia/Tokyo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia/Hong_Kong</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia/Kuala_Lumpur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia/Manila</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia/Shanghai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia/Singapore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia/Taipei</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia/Perth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia/Bangkok</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia/Jakarta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia/Saigon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia/Rangoon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia/Dacca</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia/Yekaterinburg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia/Katmandu</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Volunteers_Still_Needed__c</fullName>
        <label>Volunteers Still Needed</label>
        <summarizedField>Volunteer_Job__c.Number_of_Volunteers_Still_Needed__c</summarizedField>
        <summaryForeignKey>Volunteer_Job__c.Campaign__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <listViews>
        <fullName>AllActiveCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>Venue__c</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.NUM_CONTACTS</columns>
        <columns>CAMPAIGN.NUM_RESPONSES</columns>
        <columns>Total_registered__c</columns>
        <columns>Total_attended__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Active Campaigns</label>
    </listViews>
    <listViews>
        <fullName>MyActiveCampaigns</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Active Campaigns</label>
    </listViews>
    <listViews>
        <fullName>PILA_Pro_Bono_Referrals</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>NGO__c</columns>
        <columns>CAMPAIGN.RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Campaign.PILA_Pro_bono_Referral</value>
        </filters>
        <label>PILA Pro Bono Referrals</label>
    </listViews>
    <listViews>
        <fullName>Volunteer_Campaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.ACTIVE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>Number_of_Volunteers__c</columns>
        <columns>Volunteer_Completed_Hours__c</columns>
        <columns>Volunteer_Jobs__c</columns>
        <columns>Volunteers_Still_Needed__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Campaign.Volunteers_Campaign</value>
        </filters>
        <label>Volunteer Campaigns</label>
    </listViews>
    <recordTypes>
        <fullName>Conference</fullName>
        <active>true</active>
        <description>More complicated than an event - attendees register</description>
        <label>Conference</label>
    </recordTypes>
    <recordTypes>
        <fullName>Email_Campaign</fullName>
        <active>true</active>
        <description>Simple campaign for bulk mailing</description>
        <label>Email Campaign</label>
    </recordTypes>
    <recordTypes>
        <fullName>Event</fullName>
        <active>true</active>
        <description>This is a simple event - lecture or launch - that uses RSVP rather than registration</description>
        <label>Event</label>
    </recordTypes>
    <recordTypes>
        <fullName>PILA_Pro_bono_Referral</fullName>
        <active>true</active>
        <label>PILA Pro bono Referral</label>
    </recordTypes>
    <recordTypes>
        <fullName>Volunteers_Campaign</fullName>
        <active>true</active>
        <description>A campaign specifically used to track Volunteers</description>
        <label>Volunteer Campaign</label>
    </recordTypes>
    <sharingModel>FullAccess</sharingModel>
</CustomObject>